Fix Twitter logo and username alignment

--- a/src/components/Main/About/CircleImage/circleImage.module.scss
+++ b/src/components/Main/About/CircleImage/circleImage.module.scss
@@ -28,6 +28,10 @@
   transition: all 0.5s;
 }
 
+.twitterUsername {
+  display: block;
+}
+
 .caption {
   position: absolute;
   top: 50%;
